--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg bg-body-tertiary nav-menu">
             <div class="container-fluid">
-                <a class="logo" href="#"><img src="../IMG/logo.png" alt=""></a>
+                <a class="logo" href="#"><img src="IMG/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
